--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
+    implementation "com.github.motumarrikinneresh:Shimmer-Library:1.0.0"
+   // implementation 'com.github.motumarrikinneresh:Shimmer-Library:1.0'
     implementation project(path: ':shimmer')
 
 }
