--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,11 @@ buildscript {
         compose_ui_version = '1.2.0'
     }
     repositories {
+        google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
+
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.4.0' apply false
